A01-k8s-yaml/volume-config.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-config
  namespace: dev
spec:
  containers:
    - name: containers-nginx
      image: nginx:1.17.1
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /configmap/name-config  # 讲容器内这个目录挂载出去
          name: name-config
  volumes: # 引用configmap
    - name: name-config # 声明存储卷的名字为 logs-volume
      configMap:
        name: configmap # 填写已经创建存在的configmap的资源，这样才能把configmap资源挂载到pod
