A01-k8s-yaml/volume-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-secret
  namespace: dev
spec:
  containers:
    - name: containers-nginx
      image: nginx:1.17.1
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /secret/name-secret  # 讲容器内这个目录挂载出去
          name: name-secret
  volumes: # 引用configmap
    - name: name-secret # 声明存储卷的名字为 logs-volume
      secret:
        secretName: secret # 填写已经创建存在的secret的资源，这样才能把secret资源挂载到pod
