A01-k8s-yaml/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata: # 元数据
  name: service-clusterip
  namespace: dev
  labels: #给ReplicaSet打标签
    env: "service-clusterip"
spec:
  selector:
    app: dp-nginx-001 # pod的标签
  clusterIP: 10.1.0.11 # service 的ip地址，不写就给你随机分配一个
  type: ClusterIP
  ports:
    - port: 80 # service的端口
      targetPort: 80 # 目标pod的端口
