A01-k8s-yaml/service-externalname.yaml
apiVersion: v1
kind: Service
metadata: # 元数据
  name: service-externalname
  namespace: dev
  labels: #给ReplicaSet打标签
    env: "service-externalname"
spec:
  type: ExternalName
  externalName: www.baidu.com
