A01-k8s-yaml/service-headliness.yaml
apiVersion: v1
kind: Service
metadata: # 元数据
  name: service-headliness
  namespace: dev
  labels: #给ReplicaSet打标签
    env: "service-headliness"
spec:
  selector:
    app: dp-nginx-001 # pod的标签
#  clusterIP: 10.1.0.11 # service 的ip地址，不写就给你随机分配一个
  clusterIP: None # 将clusterIP设置为node ,就可以创建headliness 的service
  type: ClusterIP
  ports:
    - port: 80 # service的端口
      targetPort: 80 # 目标pod的端口
