A01-k8s-yaml/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata: # 元数据
  name: service-nodeport
  namespace: dev
  labels: #给ReplicaSet打标签
    env: "service-nodeport"
spec:
  selector:
    app: dp-nginx-001 # pod的标签
  type: NodePort
  ports:
    - port: 80 # service的端口
      targetPort: 80 # 目标pod的端口
      nodePort: 30002 # 绑定的node的端口，
